<resources>
    <string name="app_name">Home Assignment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account_yet">don\'t have an account yet?</string>
    <string name="exit_message">Are you sure want to exit?</string>
    <string name="exit_tittle">Exit Application</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username_err_warning">username is required</string>
    <string name="pw_err_warning">Password is required</string>
    <string name="confirmPw_err_warning">Please confirm your password</string>
    <string name="pw_not_match">Password doesn\'t match</string>
    <string name="confirmation_register">Registration</string>
    <string name="confirmation_data_message">Are you sure your data is correct?</string>
    <string name="loading">Loading</string>
    <string name="Registration_Success">Registration Success</string>
    <string name="Registration_Failed">Registration Failed</string>
    <string name="account_created_message">Registration has been successful, you can login with the account you created</string>
    <string name="account_created_fail_message">Registration failed, you can try again later</string>
    <string name="failed">failed</string>
    <string name="ok">OK</string>
    <string name="session_encrypted">session_encrypted</string>
    <string name="accountNo">accountNo</string>
    <string name="token">token</string>
    <string name="password_required">Password is required</string>
    <string name="username_required">Username is required</string>
    <string name="logout">Logout</string>
    <string name="you_have">You Have</string>
    <string name="account_no_dashboard">Account No</string>
    <string name="received">received</string>
    <string name="receipient">receipient</string>
    <string name="jwt_expired">jwt expired</string>
    <string name="session_expired">Session Expired</string>
    <string name="sessionExpired_message">Your login session has expired, please login using your account again</string>
    <string name="account_holder">Account Holder</string>
    <string name="your_transaction_history">Your Transaction History</string>
    <string name="make_transfer">Make Transfer</string>
    <string name="you_don_t_have_a_transaction_history">You don\'t have a transaction history.</string>
    <string name="transfer">Transfer</string>
    <string name="payee">Payee</string>
    <string name="amount">Amount in $SGD</string>
    <string name="description">Description</string>
    <string name="transfer_now">Transfer Now</string>
    <string name="please_fill_form_below_to_start_transfer">Please fill form below to start transfer</string>
    <string name="please_fill_form_below_to_start_register_account">Please fill form below to start register account</string>
    <string name="payee_required">Payee Required</string>
    <string name="amount_required">Amount Required</string>
    <string name="description_required">Please fill description</string>
    <string name="transfer_confirmation">Transfer Confirmation</string>
    <string name="transferring_funds">Transferring Funds</string>
    <string name="transfer_failed">Transfer Failed</string>
    <string name="receipent_account">Receipent Account :</string>
    <string name="description_transaction">Description :</string>
    <string name="amount_transaction">Amount :</string>
    <string name="transaction_id">Transaction ID :</string>
    <string name="transfer_status">Transfer Status :</string>
    <string name="logout_mssge">You will returned to login screen</string>
</resources>